--- a/src/DragonBonesDesignPanel.mxml
+++ b/src/DragonBonesDesignPanel.mxml
@@ -77,6 +77,7 @@
 				MessageDispatcher.addEventListener(MessageDispatcher.SAVE_ANIMATION_ERROR, commandHandler);
 				
 				MessageDispatcher.addEventListener(MessageDispatcher.CHANGE_IMPORT_DATA, commandHandler);
+				MessageDispatcher.addEventListener(MessageDispatcher.SELECT_ARMATURE, commandHandler);
 				MessageDispatcher.addEventListener(MessageDispatcher.SELECT_BONE, commandHandler);
 				MessageDispatcher.addEventListener(MessageDispatcher.CHANGE_BONE_PARENT, commandHandler);
 				MessageDispatcher.addEventListener(MessageDispatcher.CHANGE_ANIMATION_DATA, commandHandler);
@@ -197,16 +198,28 @@
 							_importDataProxy.armatureProxy.armatureData = null;
 						}
 						break;
-					case MessageDispatcher.COPY_BONE_AND_ANIMATION:
-						if(!_importDataProxy.isExportedSource)
+					case MessageDispatcher.SELECT_ARMATURE:
+						if(_importDataProxy.armatureProxy.skinsAC.length > 1)
 						{
-							CopyBoneAndAnimationCommand.instance.copy(e.parameters[0], e.parameters[1]);
+							skinDropDownList.visible = true;
+							skinDropDownList.percentWidth  = 100;
+						}
+						else
+						{
+							skinDropDownList.visible = false;
+							skinDropDownList.width = 0;
 						}
 						break;
 					case MessageDispatcher.SELECT_BONE:
 						if(e.parameters[0] == _importDataProxy.armatureProxy)
 						{
 							armatureViewer.updateSelectedBone(_importDataProxy.armatureProxy.selectedBoneName);
+						}
+						break;
+					case MessageDispatcher.COPY_BONE_AND_ANIMATION:
+						if(!_importDataProxy.isExportedSource)
+						{
+							CopyBoneAndAnimationCommand.instance.copy(e.parameters[0], e.parameters[1]);
 						}
 						break;
 					case MessageDispatcher.CHANGE_BONE_PARENT:
@@ -435,8 +448,7 @@
 								dataProvider="{ImportDataProxy.getInstance().armaturesAC}"
 								selectedItem ="@{ImportDataProxy.getInstance().armatureProxy.armatureData}"
 								/>
-				<s:Label text="{resourceManager.getString('resources','skin')}" fontWeight="bold"/>
-				<s:DropDownList width="100%" height="24"
+				<s:DropDownList id="skinDropDownList" width="0" visible="false" height="24"
 								labelField="name"
 								dataProvider="{ImportDataProxy.getInstance().armatureProxy.skinsAC}"
 								selectedItem ="@{ImportDataProxy.getInstance().armatureProxy.selectedSkinData}"
