--- a/src/view/ImportWindow.mxml
+++ b/src/view/ImportWindow.mxml
@@ -34,6 +34,9 @@
 					case 2:
 						ImportCommand.instance.importFileData(false);
 						break;
+					case 3:
+						ImportCommand.instance.importFileData(false, null, 1);
+						break;
 				}
 			}
 			
