add send message feature

--- a/src/view/CopyWindow.mxml
+++ b/src/view/CopyWindow.mxml
@@ -11,6 +11,7 @@
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
+			import cloud.GA.DBGATrackerManager;
 			
 			import message.Message;
 			import message.MessageDispatcher;
