--- a/src/DragonBonesDesignPanel.mxml
+++ b/src/DragonBonesDesignPanel.mxml
@@ -13,6 +13,7 @@
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
+			import cloud.GA.DBGATrackerManager;
 			import cloud.DBCloud;
 			import cloud.DBNetworkUtils;
 			import cloud.events.DBCloudEvent;
