--- a/src/view/TextureAtlasWindow.mxml
+++ b/src/view/TextureAtlasWindow.mxml
@@ -20,12 +20,16 @@
 			
 			private function showHandler(event:Event):void
 			{
+				this.window.title = resourceManager.getString('resources','textureAtlas');
+				
 				if(_importDataProxy.textureAtlas)
 				{
 					_bitmap.bitmapData = _importDataProxy.textureAtlas.bitmapData;
 					textureContainer.addChild(_bitmap);
 					textureContainerGroup.width = _bitmap.width;
 					textureContainerGroup.height = _bitmap.height;
+					
+					this.window.title = this.window.title + ": " + _bitmap.width + " x " + _bitmap.height;
 				}
 			}
 			
@@ -37,7 +41,7 @@
 			
 		]]>
 	</fx:Script>
-	<s:TitleWindow left="20" right="20" top="20" bottom="20" title="{resourceManager.getString('resources','textureAtlas')}" close="closeHandler(event)">
+	<s:TitleWindow id="window" left="20" right="20" top="20" bottom="20" title="" close="closeHandler(event)">
 		<s:Scroller width="100%" height="100%">
 			<s:Group>
 				<s:Group id="textureContainerGroup">
