add more localization items

--- a/DragonBonesDesignPanelLib/src/core/view/AnimationControlView.mxml
+++ b/DragonBonesDesignPanelLib/src/core/view/AnimationControlView.mxml
@@ -76,7 +76,7 @@
 						</s:HGroup>
 						
 						<s:HGroup width="100%" verticalAlign="middle">
-							<s:CheckBox label="Auto Tween"
+							<s:CheckBox label="{resourceManager.getString('resources','autotween')}"
 										id="checkAutoTween"
 										/>
 							
